fixed minor text alignment fixed top button scrolling to correct position

--- a/portfolio_website/public_html/css/project_desktop.css
+++ b/portfolio_website/public_html/css/project_desktop.css
@@ -166,6 +166,9 @@ a:hover {
 
 /*IDS*/
 #link {
-    padding: 20px;
-    font-size: 1.25em !important;
+    font-size: 1em;
+}
+
+#marginImage {
+    margin-bottom: 20px;
 }
