--- a/portfolio_website/public_html/css/tablet.css
+++ b/portfolio_website/public_html/css/tablet.css
@@ -19,7 +19,7 @@ body{
 }
 
 header {
-    height: 100px;
+    height: 150px;
     background-image: url("../images/linen_texture.png");
     top: 0;
     width: 100%;
